# mbkit

./: .gitignore  README.md  pyproject.toml
doc/: devplan.md  operator_module_design.md  solver_module_refactor.md  solverplan.md
examples/: README.md  benchmark_two_orbital_extended_hubbard_solvers.py  test.ipynb  tutorial_block2_dmrg_solver.py  tutorial_ed_solver.py  tutorial_pyscf_ccsd_solver.py  tutorial_pyscf_ccsdt_solver.py  tutorial_pyscf_mp2_solver.py  tutorial_quantax_nqs_solver.py  two_orbital_extended_hubbard.py
mbkit/: __init__.py
mbkit/nao/: __init__.py  ghf.py  hf.py  lanczos.py  tonao.py
mbkit/operator/: __init__.py  common_operators.py  integrals.py  lattice.py  operator.py  quadratic.py  site_operator.py  soc.py  space.py
mbkit/operator/extended_hubbard/: __init__.py  extended_hubbard.py
mbkit/operator/interop/: __init__.py  (+2 more)
mbkit/solver/: __init__.py  _frontend.py  _optional.py  _solver.py  base.py  capabilities.py  ccsd_solver.py  ccsdt_solver.py  cluster.py  dmrg_solver.py  ed_solver.py  fci_solver.py  graph_net.py  mp2_solver.py  nqs_solver.py  pyscf_solver.py  registry.py  uhf_solver.py
mbkit/utils/: __init__.py  construction.py  dependencies.py  selection.py  solver.py
tests/: test_direct_solver_adapters.py  test_ed_solver.py  test_imports.py  test_operator_integrals.py  test_operator_interop.py  test_operator_models.py  test_operator_ux.py  test_optional_backends.py  test_solver_api.py  test_solver_live_backends.py  test_solver_local_terms.py  test_solver_quantax_compile.py  test_solver_registry.py  test_solver_transforms.py
(+27 files in other folders)
