[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbkit"
version = "0.1.0.dev0"
description = "Many-body Hamiltonian construction and solver adapters."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LGPL-3.0"}
authors = [{name = "mbkit developers"}]
dependencies = [
    "numpy",
    "scipy",
    "quspin",
]
keywords = ["many-body", "quantum", "hamiltonian", "solver", "exact diagonalization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
core = ["numpy", "scipy", "quspin"]
ed = ["numpy", "scipy", "quspin"]
dmrg = ["pyblock2"]
quimb = ["quimb"]
tenpy = ["tenpy"]
tensor = ["quimb", "tenpy"]
interop = ["openfermion", "qiskit-nature"]
pyscf = ["pyscf"]
dev = ["pytest>=7"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["mbkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
